# Enviromental-Pollution-Detection-using-Deep-Learning

./: .gitignore  README.md  apply_minmax_normalization.py  apply_normalization.py  apply_peak_to_peak_normalization.py  apply_robust_scaling_normalization.py  corrected_experimental_evaluation.tex  experimental_evaluation.tex  experimental_evaluation_latex.tex  main.py  normalization_examples.py  normalize_chips.py  pyproject.toml  requirements.txt  test.py  test_finetune.py  train_autoencoder.py  train_classifier.py
data/: 2.csv  4.csv
data/mean_and_divide_other_classes_with_this/: 1.csv  2.csv  4.csv
data/mean_and_std/: 1.csv  2.csv  3.csv
data/standard_scaler/: 4.csv
old/: main.py  test.py
old/data/: 1.csv  3.csv  Processed_FTS-MZI_Matrix.csv
old/pths/: classifier_model_1.pth  classifier_model_3.pth  denoiser_model_1.pth  denoiser_model_2.pth  denoiser_model_3.pth  denoiser_model_4.pth
old/utils/: data_utils.py  models.py  train_test_utils.py
pths/: autoencoder_train.pth  classifier_model.pth  classifier_model_1.pth  classifier_model_2.pth  classifier_model_3.pth  classifier_model_4.pth  classifier_train.pth  denoiser_model.pth  denoiser_model_1.pth  denoiser_model_2.pth  denoiser_model_3.pth  denoiser_model_4.pth
pths/old/: classifier_model_2.pth  classifier_model_4.pth  denoiser_model_1.pth  denoiser_model_2.pth
train_1_2_3_4__test5/: main.py
train_2_test_3/: main.py  test.py
train_2_test_3/pths/: denoiser_model_2.pth
utils/: config.py  data_utils.py  models.py  normalization_techniques.py  path_utils.py  plot_utils.py  train_test_utils.py
(+23 files in other folders)
