[project]
name = "enviromental-pollution-detection-using-deep-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Stelios Papargyris",email = "papargirisstelios3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock (==3.17.0)",
    "fsspec (==2024.12.0)",
    "jinja2 (==3.1.5)",
    "joblib (==1.4.2)",
    "markupsafe (==3.0.2)",
    "mpmath (==1.3.0)",
    "networkx (==3.4.2)",
    "numpy (==2.2.2)",
    "pillow (==11.1.0)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.1)",
    "setuptools (==75.8.0)",
    "sympy (==1.13.1)",
    "threadpoolctl (==3.5.0)",
    "torch (==2.6.0)",
    "torchensemble (==0.2.0)",
    "torchvision (==0.21.0)",
    "typing-extensions (==4.12.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
